# smart_contract_platform

./: Cargo.toml
src/: blockchain.rs  bytecode.rs  main.rs  transaction.rs  util.rs
