[package]
name = "smart_contract_platform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", feature = ["derive"]}
parity-wasm = "0.45.0"
wasmer = "4.2.0"
sha2 = "0.10.7"
wasmer-compiler-cranelift = "4.2.0"
wasmer-engine-jit = "1.0.2"